--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
+    "@next-auth/upstash-redis-adapter": "^3.0.4",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
@@ -19,9 +21,13 @@
     "eslint-config-next": "13.4.4",
     "lucide-react": "^0.234.0",
     "next": "13.4.4",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.24",
+    "pusher": "^5.1.3",
+    "pusher-js": "^8.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^1.13.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
